--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -907,6 +907,43 @@ TCP-Vegas使用RTT估计拥塞，但tcp/nc掩盖丢包的时候
   pages  = {396-407},
 }
 
+@Article{潘凯2014有损网络下的高性能传输控制协议研究,
+  author  = {潘凯 and 李挥},
+  title   = {有损网络下的高性能传输控制协议研究},
+  journal = {通信学报},
+  year    = {2014},
+  volume  = {35},
+  number  = {7},
+  pages   = {70-76},
+  file    = {:有损网络下的高性能传输控制协议研究.pdf:PDF},
+}
+
+@InProceedings{4015738,
+  author    = {D. Wang and Q. Zhang and J. Liu},
+  title     = {Partial Network Coding: Theory and Application for Continuous Sensor Data Collection},
+  booktitle = {200614th IEEE International Workshop on Quality of Service},
+  year      = {2006},
+  pages     = {93-101},
+  month     = {June},
+  abstract  = {Wireless sensor networks have been widely used for surveillance in harsh environments. In many such applications, the environmental data are continuously sensed, and data collection by a server is only performed occasionally. Hence, the sensor nodes have to temporarily store the data, and provide easy and on-hand access for the most updated data when the server approaches. Given the expensive server-to-sensor communications, the large amount of sensors and the limited storage space at each tiny sensor, continuous data collection becomes a challenging problem. In this paper, we present partial network coding (PNC) as a generic tool for the above applications. PNC generalizes the existing network coding (NC) paradigm, an elegant solution for ubiquitous data distribution and collection. Yet, PNC enables efficient storage replacement for continuous data, which is a major deficiency of the conventional NC. We prove that the performance of PNC is quite close to NC, except for a sub-linear overhead on storage and communications. We then address a set of practical concerns toward PNC-based continuous data collection in sensor networks. Its feasibility and superiority are further demonstrated through simulation results
+
+
+扩域大小为GF(2^8)，解码成功率也为99.6%以上},
+  doi       = {10.1109/IWQOS.2006.250455},
+  file      = {:Partial Network Coding Theory and Application for Continuous Sensor Data Collection.pdf:PDF},
+  issn      = {1548-615X},
+  keywords  = {encoding;wireless sensor networks;PNC;data collection;elegant solution;feasibility;generic tool;partial network coding;ubiquitous data distribution;wireless sensor network;Application software;Chemical sensors;Computer networks;Computer science;Decoding;Humans;Information retrieval;Network coding;Network servers;Wireless sensor networks},
+}
+
+@Book{Li2016Toward,
+  title     = {Toward a Loss-Free Packet Transmission via Network Coding},
+  publisher = {Springer International Publishing},
+  year      = {2016},
+  author    = {Li, Hui and Pan, Kai and Li, Shuo Yen Robert},
+  file      = {:Toward a Loss-Free Packet Transmission.pdf:PDF},
+  groups    = {自适应冗余算法},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: groupstree:
