--- a/content/chap04.tex
+++ b/content/chap04.tex
@@ -2,7 +2,7 @@
 %                西南交通大学研究生学位论文：第四章内容
 %---------------------------------------------------------------------------------
 \chapter{TCP/NC的改进及真实环境测试}
-本章主要对文献\cite{Sundararajan2009}所提的TCP/NC给出几点改进，实现增强TCP/NC协议，即E-TCP/NC，并验证相关性能。提出了前向重传机制以应对一个RTO内的突发丢包；提出了一种新的自适应冗余度算法以应对网络的变化；对冗余包的发送时机给出改进以降低平均解码时延；设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；改进编码系数的设定以降低首部开销和减低解码复杂度。
+本章主要对文献\cite{Sundararajan2009}所提的TCP/NC给出几点改进，实现增强TCP/NC协议，即E-TCP/NC，并验证相关性能。提出了前向重传机制以应对一个RTO内的突发丢包；提出了一种新的自适应冗余度算法以应对网络的变化；对冗余包的发送时机给出改进以降低平均解码时延；设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；改进编码系数的设定以降低首部开销。
 \section{前向重传机制}
 \subsection{TCP/NC的突发丢包问题}
 通过冗余编码，TCP/NC可以很好地应对随机丢包网络的丢包。但当突发丢包发生时，TCP/NC表现就不好了。当突发丢包产生时，一般会要求重传，而TCP/NC的报文重传任务完全依赖TCP层。为了提高TCP/NC在突发丢包网络中的性能，本文提出了一种前向重传机制，能够同时高效地重传多个报文。
@@ -24,7 +24,7 @@ TCP-Reno对于一个RTO内报文的连续丢失采取的是单个依次重传的
 	\caption{前向重传机制}
 	\label{NEWFR_EPS}
 \end{figure}
-\subsection{新NC头部设计}
+\subsection{新NC头部设计}\label{sec:newnc}
 为了支撑前向重传机制，本文设计了新的NC头部，如图\ref{NEWHEADER_EPS}。原有TCP/NC头部设计 （ 图\ref{CODINGHEADER_EPS} ）中的Res字段，有6个比特可供使用，对应图\ref{NEWHEADER_EPS}中的$b_1 \sim b_6$。此六个比特与标准TCP中的保留字段对应。在第\ref{ztlc}小节中，我们讲到需要区分NC报文和普通TCP报文，可以利用$b_1$标识这个是TCP报文还是NC报文。利用$b_2$表示R-flag，表示当前这个报文是否要被上交给TCP层；利用$b_3$、$b_4$和$b_5$一起表示当前报文的\emph{报文状态}（ 后面会讲到\emph{报文状态}的作用 ）。增加了Pid和Pid-reply两个域，各自两个字节。其中Pid表示NC层发出的报文编号，以报文为计数单位，而非字节。NC层发出的每个线性组合报文有独一无二的Pid（ 回环问题另做考虑 ），接收端在收到编号为Pid的线性组合报文后，在回复的ACK报文中，Pid-reply域就填上Pid，表示当前这个ACK是由编号为Pid的线性组合包激发的。
 \begin{figure}[htbp]
 	\centering
@@ -114,10 +114,10 @@ R_{new}=a*\frac{1}{1-\rho}+b*R_{old},0 \le a,b \le 1,a+b=1
 	\item 提取\emph{Pid-reply}域，罗列Pid值为\emph{Pid-reply}的编码包的所有原始数据包$p_i \sim p_j\left(i \le j\right)$
 	\item 如果ACK报文的确认序号$ACK=p_k$，那么可知接收端解码矩阵在收到编号\emph{Pid=Pid-reply}的编码报文时，缺失$j-k+1$个编码包才可以变为可解状态。
 \end{enumerate}
-\section{固定编码系数}
-原有TCP/NC协议的原始数据包系数是在某个有限域上的随机数。选定有线域越大，解码成功率越大。根据文献\cite{4015738}所述，当选定的有限域为$GF\left(2^8\right)$时，解码成功率超过$99.6\%$。但有限域越大，有限域上的运算要么耗时长，要么查表消耗内存过大。选定$GF\left(2^8\right)$是个折中的选择。在$GF\left(2^8\right)$下，每个系数是一个字节，当编码窗口比较大时，NC头部的系数是一大笔开销。而且，解码时的运算复杂度也比较高，解码时需要按字节进行操作，而一个数据包的最大长度为1400字节，如果编码窗口固定为\emph{W}的话，那么一次解码就需要$1400*W^2$次循环，运算复杂度比较高。
+\section{固定编码系数码本}
+原有TCP/NC协议的原始数据包系数是在某个有限域上的随机数。选定有线域越大，解码成功率越大。根据文献\cite{4015738}所述，当选定的有限域为$GF\left(2^8\right)$时，解码成功率超过$99.6\%$。但有限域越大，有限域上的运算要么耗时长，要么查表消耗内存过大。选定$GF\left(2^8\right)$是个折中的选择。在$GF\left(2^8\right)$下，每个系数是一个字节，当编码窗口比较大时，NC头部的系数是一大笔开销。
 \par
-本文设计固定系数编码的方法。假定正常编码包为$C[i](i \ge 0)$，固定编码窗口为$W(W>1)$，$C\left[i\right]$按如下方法生成：
+借用本文第\ref{sec:newnc}小节中为前向重传机制设置的Pid字段，本文在发送端固定系数码本，以减小头部开销。采用编码码本的思路在文献\cite{宋蒙2015基于网络编码的}中有提到，与之不同的是，本文系数码本为范德蒙矩阵，其任意\emph{n}行子集都是线性无关的。假定编码包为$C[i](i \ge 0)$，固定编码窗口为$W(W>1)$，$C\left[i\right]$按如下方法生成：
 \begin{eqnarray}
 C\left[i\right]=\begin{cases}\label{eq:43}
 \sum\limits_{j = 0}^i {{a_{ij}}{p_j}} & \left(0 \le i < W\right)\\
@@ -135,6 +135,7 @@ a_{ij}=\begin{cases}\label{eq:44}
 
 \section{真实网络环境测试}
 \subsection{无人机lossy信道环境搭建}
+\subsection{E-TCP/NC在无人机视频传输的应用}
 \subsection{测试结果}
 \subsection{性能分析}
 \section{本章小结}
