--- a/content/chap04.tex
+++ b/content/chap04.tex
@@ -2,14 +2,14 @@
 %                西南交通大学研究生学位论文：第四章内容
 %---------------------------------------------------------------------------------
 \chapter{TCP/NC的改进及真实环境测试}
-本章主要对文献\cite{Sundararajan2009}所提的TCP/NC给出几点改进，实现增强TCP/NC协议，即E-TCP/NC，并验证相关性能。提出了前向重传机制以应对一个RTO内的突发丢包；提出了一种新的自适应冗余度算法以应对网络的变化；对冗余包的发送时机给出改进以降低平均解码时延；设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；改进编码系数的设定以降低首部开销。
+本章主要对TCP/NC给出几点改进，实现增强TCP/NC协议，即E-TCP/NC，并在真实无人机视频传输环境中验证相关性能。提出了前向重传机制以应对一个RTO内的突发丢包；提出了一种新的自适应冗余度算法以应对网络的变化；对冗余包的发送时机给出改进以降低平均解码时延；设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；改进编码系数的设定以降低首部开销。
 \section{前向重传机制}
 \subsection{TCP/NC的突发丢包问题}
-通过冗余编码，TCP/NC可以很好地应对随机丢包网络的丢包。但当突发丢包发生时，TCP/NC表现就不好了。当突发丢包产生时，一般会要求重传，而TCP/NC的报文重传任务完全依赖TCP层。为了提高TCP/NC在突发丢包网络中的性能，本文提出了一种前向重传机制，能够同时高效地重传多个报文。
+通过冗余编码，TCP/NC可以很好地应对随机丢包网络的丢包。但当突发丢包发生时，TCP/NC表现就不好了。当突发丢包产生时，一般会要求重传，而TCP/NC的报文重传任务完全依赖TCP层，不能很好地处理一个RTO内的连续报文丢失。无人机的工作环境决定了大尺度衰落信道环境经常出现，会导致一连串的突发丢包，进而影响基于TCP/NC协议的无人机视频传输流畅度。为了进一步提高无人机视频传输的性能，本文提出了一种前向重传机制，能够同时高效地重传多个报文。
 \par
 通过增大TCP/NC的编码窗口可以提高TCP/NC应对突发丢包的能力，但是带来的后果是解码端运算复杂度的急剧增加，进而增大解码时延。在未发生超时重传时，TCP层单个、按序地在多个RTT内重传各个丢失的报文，因此TCP/NC会消耗很长一段时间来重传丢失的报文。图\ref{FR_EPS}展示了在丢了4个报文的情况下，TCP/NC是如何重传丢失的报文的。图\ref{FR_EPS}例子中设定的编码窗口值为2，冗余度为$\frac{1}{7}$，也就是说每7个编码包，多发一个冗余包。可以看到源端对$p_2$，$p_3$，$p_4$的重传总共耗费了3个RTT，导致目的端的NC层虽然在收到$C\left[8\right]$时就开始可以解码$p_5$后面的报文，但由于乱序，无法将它们上交给上层的TCP。
 \par
-在TCP-Reno中，对于重复ACK采取的是快速重传的方法。以图\ref{FR_EPS}为例，源端的NC层在收到3个对$p_2$的ACK之后，直接将其交付给上层TCP。上层TCP收到3个重复的对$p_2$的ACK，认为报文$p_2$丢失了，采取快速重传，只重传$p_2$，然后进入拥塞避免阶段，继续接着$p_{10}$发送$p_{11}$。接收端在收到$p_2$的重传报文$C\left[11\right]$后，又陆续回给源端多个重复ACK，表示$p_3$丢失。源端TCP又启动快速重传，重传报文$p_3$。后面对报文$p_4$的重传和$p_1$，$p_2$的情况一样。当编码窗口的值更大，RTT比较大时，这种情况产生的影响更大。
+在TCP-Reno中，对于重复ACK采取的是快速重传的方法。以图\ref{FR_EPS}为例，源端的NC层在收到3个对$p_2$的ACK之后，直接将其交付给上层TCP。上层TCP收到3个重复的对$p_2$的ACK，认为报文$p_2$丢失了，采取快速重传，只重传$p_2$，然后进入拥塞避免阶段，继续接着$p_{10}$发送$p_{11}$。接收端在收到$p_2$的重传报文$C\left[11\right]$后，又陆续回给源端多个重复ACK，表示$p_3$丢失。源端TCP又启动快速重传，重传报文$p_3$。后面对报文$p_4$的重传和$p_1$，$p_2$的情况一样。当编码窗口和RTT比较大时，这种一个RTO内的突发丢包对性能的损失更大。
 \par
 TCP-Reno对于一个RTO内报文的连续丢失采取的是单个依次重传的处理策略，因此对突发丢包不是很友好。NC层的引入让这一策略的劣势更为凸显。当NC层出现重复ACK时，意味着链路中出现的丢包就绝不仅仅是单个报文的丢失，这是由于NC层的“seen”机制导致的。直觉上，由于NC层缓存有未被确认的数据包，我们可以在NC层重传那些未被看到的报文。当NC层收到第一个从TCP层下来的重传报文\emph{pkt}后，NC层不仅重传\emph{pkt}，而是会在一个RTT内顺便将所有未看到的报文都重传。如此，可以让上层TCP认为仅仅就丢了一个包。如图\ref{NEWFR_EPS}所示，NC层收到上层TCP的重传报文$p_2$后，在一个RTT内重传了未看到的报文$p_2$，$p_3$和$p_4$。
 \begin{figure}[htbp]
@@ -25,7 +25,7 @@ TCP-Reno对于一个RTO内报文的连续丢失采取的是单个依次重传的
 	\label{NEWFR_EPS}
 \end{figure}
 \subsection{新NC头部设计}\label{sec:newnc}
-为了支撑前向重传机制，本文设计了新的NC头部，如图\ref{NEWHEADER_EPS}。原有TCP/NC头部设计 （ 图\ref{CODINGHEADER_EPS} ）中的Res字段，有6个比特可供使用，对应图\ref{NEWHEADER_EPS}中的$b_1 \sim b_6$。此六个比特与标准TCP中的保留字段对应。在第\ref{ztlc}小节中，我们讲到需要区分NC报文和普通TCP报文，可以利用$b_1$标识这个是TCP报文还是NC报文。利用$b_2$表示R-flag，表示当前这个报文是否要被上交给TCP层；利用$b_3$、$b_4$和$b_5$一起表示当前报文的\emph{报文状态}（ 后面会讲到\emph{报文状态}的作用 ）。增加了Pid和Pid-reply两个域，各自两个字节。其中Pid表示NC层发出的报文编号，以报文为计数单位，而非字节。NC层发出的每个线性组合报文有独一无二的Pid（ 回环问题另做考虑 ），接收端在收到编号为Pid的线性组合报文后，在回复的ACK报文中，Pid-reply域就填上Pid，表示当前这个ACK是由编号为Pid的线性组合包激发的。
+为了支撑前向重传机制，本文设计了新的NC头部，如图\ref{NEWHEADER_EPS}。原有TCP/NC头部设计 （ 图\ref{CODINGHEADER_EPS} ）中的\emph{Res}字段，有6个比特可供使用，对应图\ref{NEWHEADER_EPS}中的$b_1 \sim b_6$。此六个比特与标准TCP中的保留字段对应。在第\ref{ztlc}小节中，我们讲到需要区分NC报文和普通TCP报文，可以利用$b_1$标识这个是TCP报文还是NC报文。利用$b_2$表示\emph{R-flag}，表示当前这个报文是否要被上交给TCP层；利用$b_3$、$b_4$和$b_5$一起表示当前报文的\emph{报文状态}（ 后面会讲到\emph{报文状态}的作用 ）。增加了\emph{Pid}和\emph{Pid-reply}两个域，各自两个字节。其中\emph{Pid}表示NC层发出的报文的编号，以报文为计数单位，而非字节。NC层发出的每个线性组合报文有独一无二的\emph{Pid}（ 回环问题另做考虑 ），接收端在收到编号为\emph{Pid}的线性组合报文后，在回复的ACK报文中，\emph{Pid-reply}域就填上\emph{Pid}，表示当前这个ACK是由编号为\emph{Pid}的线性组合包激发的。
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=6in]{figures/newheader.eps}
@@ -39,10 +39,10 @@ TCP-Reno对于一个RTO内报文的连续丢失采取的是单个依次重传的
 \begin{enumerate}[fullwidth,itemindent=2em,label=(\arabic*)]
 	\item 有新的数据被确认且ACK报文中R-flag（ 后面会解释R-flag含义 ）未置位，那么将其交给上层TCP。
 	\item 有新的数据被确认而ACK报文中R-flag置位，此ACK需要被抑制，不会被交付给上层TCP，如图\ref{NEWFR_EPS}中对$C\left[11\right]$和$C\left[12\right]$的ACK，但会更新NC层中未被看到的报文，从未被看到的报文列表中移除本次新确认的数据。
-	\item 本次ACK并没有确认新的数据，提取其中的\emph{Pid-reply}域，然后罗列Pid值为Pid-reply的编码包的所有原始数据包$p_i \sim p_j(i \le j)$。如果目前在发送端未被确认的数据包中最小序号为$seq_1$，$p_i$数据包的起始序号是$seq_2$，那么我们可知接收端那边未看到的报文序号是在$seq_1 \sim \left(seq_2 - 1\right)$之间。由于发送端可能会收到接收端多个这样的ACK报文，如图\ref{NEWFR_EPS}中对$C\left[6\right]$，$C\left[7\right]$和$C\left[8\right]$的确认ACK报文，未看到的报文区间会被更新，但更新的方式只能是区间长度变小，也就是说$seq_2-1$只能向着$seq_1$靠拢。以图\ref{NEWFR_EPS}为例，发送端在收到对$C\left[7\right]$的ACK后，未看到的报文区间不会改变，依然是$seq_{p_2} \sim seq_{p_5} - 1$。
+	\item 本次ACK并没有确认新的数据，提取其中的\emph{Pid-reply}域，然后罗列\emph{Pid}值为\emph{Pid-reply}的编码包的所有原始数据包$p_i \sim p_j(i \le j)$。如果目前在发送端未被确认的数据包中最小序号为$seq_1$，$p_i$数据包的起始序号是$seq_2$，那么我们可知接收端那边未看到的报文序号是在$seq_1 \sim \left(seq_2 - 1\right)$之间。由于发送端可能会收到接收端多个这样的ACK报文，如图\ref{NEWFR_EPS}中对$C\left[6\right]$，$C\left[7\right]$和$C\left[8\right]$的确认ACK报文，未看到的报文区间会被更新，但更新的方式只能是区间长度变小，也就是说$seq_2-1$只能向着$seq_1$靠拢。以图\ref{NEWFR_EPS}为例，发送端在收到对$C\left[7\right]$的ACK后，未看到的报文区间不会改变，依然是$seq_{p_2} \sim seq_{p_5} - 1$。
 \end{enumerate}
 \par
-从图\ref{NEWFR_EPS}中可以看到，接收端发出的对报文$C\left[11\right]$和$C\left[12\right]$的确认ACK报文被发送端的NC层抑制了，并没有交给上层。发送端的NC层直到收到ACK为$p_{10}$的报文，才将此ACK上交给上层TCP。这样达到了让上层TCP以为仅仅丢了一个包的目的。因此，我们需要在NC头部添加\emph{报文状态}字段。可以告知接收端当前这个报文能否让接收端产生确认所有重传报文的ACK报文。如果可以，那么接收端在回复给发送端的ACK报文中会将R-flag清掉；如果不行，接收端在回复给发送端的ACK报文中会对R-flag置位。这样发送端的NC层就可以根据R-flag状态来决定是否将ACK报文送往上层TCP。表\ref{tab:BWZT}展示的是所有的报文状态信息。
+从图\ref{NEWFR_EPS}中可以看到，接收端发出的对报文$C\left[11\right]$和$C\left[12\right]$的确认ACK报文被发送端的NC层拦截了，并没有交给上层。发送端的NC层直到收到ACK为$p_{10}$的报文，才将此ACK上交给上层TCP。这样达到了让上层TCP以为仅仅丢了一个包的目的。因此，我们需要在NC头部添加\emph{报文状态}字段。可以告知接收端当前这个报文能否让接收端产生确认所有重传报文的ACK报文。如果可以，那么接收端在回复给发送端的ACK报文中会将\emph{R-flag}清掉；如果不行，接收端在回复给发送端的ACK报文中会对\emph{R-flag}置位。这样发送端的NC层就可以根据\emph{R-flag}状态来决定是否将ACK报文送往上层TCP。表\ref{tab:BWZT}展示的是所有的报文状态信息。
 
 \begin{table}[htp]
 	\centering
@@ -115,24 +115,32 @@ R_{new}=a*\frac{1}{1-\rho}+b*R_{old},0 \le a,b \le 1,a+b=1
 	\item 如果ACK报文的确认序号$ACK=p_k$，那么可知接收端解码矩阵在收到编号\emph{Pid=Pid-reply}的编码报文时，缺失$j-k+1$个编码包才可以变为可解状态。
 \end{enumerate}
 \section{固定编码系数码本}
-原有TCP/NC协议的原始数据包系数是在某个有限域上的随机数。选定有线域越大，解码成功率越大。根据文献\cite{4015738}所述，当选定的有限域为$GF\left(2^8\right)$时，解码成功率超过$99.6\%$。但有限域越大，有限域上的运算要么耗时长，要么查表消耗内存过大。选定$GF\left(2^8\right)$是个折中的选择。在$GF\left(2^8\right)$下，每个系数是一个字节，当编码窗口比较大时，NC头部的系数是一大笔开销。
+原有TCP/NC协议的编码数据包系数是在某个有限域上的随机数。选定有限域越大，解码成功率越大。根据文献\cite{4015738}所述，当选定的有限域为$GF\left(2^8\right)$时，解码成功率超过$99.6\%$。但有限域越大，有限域上的运算要么耗时长，要么查表消耗内存过大。选定$GF\left(2^8\right)$是个折中的选择。在$GF\left(2^8\right)$下，每个系数是一个字节，当编码窗口比较大时，NC头部的系数是一大笔开销。
 \par
-借用本文第\ref{sec:newnc}小节中为前向重传机制设置的Pid字段，本文在发送端固定系数码本，以减小头部开销。采用编码码本的思路在文献\cite{宋蒙2015基于网络编码的}中有提到，与之不同的是，本文系数码本为范德蒙矩阵，其任意\emph{n}行子集都是线性无关的。假定编码包为$C[i](i \ge 0)$，固定编码窗口为$W(W>1)$，$C\left[i\right]$按如下方法生成：
-\begin{eqnarray}
-C\left[i\right]=\begin{cases}\label{eq:43}
-\sum\limits_{j = 0}^i {{a_{ij}}{p_j}} & \left(0 \le i < W\right)\\
-\sum\limits_{j = 0}^{W-1} {{a_{ij}}{p_{i-W+1+j}}}&\left(i \ge W\right)
-\end{cases} \\
-a_{ij}=\begin{cases}\label{eq:44}
-2&(i \ge 5\&j=W-1)\\
-2&(0 \le i < 5\&j=i)\\
-1&(else)
-\end{cases}
-\end{eqnarray}
+借用本文第\ref{sec:newnc}小节中为前向重传机制设置的Pid字段，本文在发送端固定系数码本，以减小头部开销。采用编码码本的思路在文献\cite{宋蒙2015基于网络编码的}中有提到，与之不同的是，本文系数码本为范德蒙矩阵，其任意\emph{n}行子集都是线性无关的。本文固定编码窗口为5，其编码系数码本\emph{vand\_matrix}为一个$254 \times 5$的矩阵：
+\begin{equation}
+	vand\_matrix=\left[ {\begin{array}{*{20}{c}}
+		{0x01}&{0x01}&{0x01}&{0x01}&{0x01}\\
+		{0x01}&{0x02}&{0x04}&{0x08}&{0x10}\\
+		{0x01}&{0x03}&{0x05}&{0x0f}&{0x11}\\
+		{0x01}&{0x04}&{0x10}&{0x40}&{0x1b}\\
+		{0x01}&{0x05}&{0x11}&{0x55}&{0x1a}\\
+		{\vdots}&{\vdots}&{\vdots}&{\vdots}&{\vdots}\\
+		{0x01}&{0xfe}&{0x12}&{0x9e}&{0x1f}
+		\end{array}} \right]
+\end{equation}
 \par
-式\ref{eq:43}中$a_{ij}$表示编码系数，$p_{j}$表示原始数据包。与正常编码包不同，冗余编码包的构成依然按照原先的方式，即各个原始数据包的系数为有线域$GF\left(2^8\right)$上的随机数。不同正常编码包的线性独立由不同编码包的不同维度保证。例如，编码窗口$W=5$时，$C\left[0\right]=2p_0$，$C\left[1\right]=p_0+2p_1$，$C\left[2\right]=p_0+p_1+2p_2$，$C\left[3\right]=p_0+p_1+p_2+2p_3$，$C\left[4\right]=p_0+p_1+p_2+p_3+2p_4$，$C\left[5\right]=p_1+p_2+p_3+p_4+2p_5$。$C\left[0\right] \sim C\left[5\right]$都是线性独立的。采用此种固定编码系数的方法
-
-
+其构成方法为：
+\begin{equation}
+	vand\_matrix[i][j]=(i+1)^j
+\end{equation}
+\par
+由\emph{Pid}到编码系数\emph{coeff}的映射函数为:
+\begin{equation}
+	f:Pid \rightarrow coeff=vand\_matrix[Pid\%255]
+\end{equation}
+\par
+发送端和接收端同时保持有相同的编码系数码本，接收端通过提取报文的\emph{Pid}字段即可知道编码包的编码系数。
 \section{真实网络环境测试}
 \subsection{无人机lossy信道环境搭建}
 \subsection{E-TCP/NC在无人机视频传输的应用}
